# Inspire_Hand_ROS_Controller

./: README.md
inspire_hand_modbus/: CMakeLists.txt  inspire_hand_modbus使用方法.txt  package.xml
inspire_hand_modbus/launch/: control.launch
inspire_hand_modbus/msg/: get_angle_act_1.msg
inspire_hand_modbus/scripts/: handcontrol_topic_publisher_modbus.py  handcontrol_topic_subscriber_modbus.py  inspire_hand_modbus_topic.py  touch_data.py
inspire_hand_modbus/src/: config.yaml  hand_control.cpp  hand_control.h  hand_control_client_modbus.cpp  main.cpp
inspire_hand_modbus/srv/: get_angle_act.srv  get_angle_set.srv  get_current.srv  get_error.srv  get_force_act.srv  get_force_set.srv  get_pos_act.srv  get_pos_set.srv  get_status.srv  get_temp.srv  set_angle.srv  set_clear_error.srv  set_current_limit.srv  set_default_force.srv  set_default_speed.srv  set_force.srv  set_force_clb.srv  set_gesture_no.srv  set_id.srv  set_pos.srv  set_redu_ratio.srv  set_reset_para.srv  set_save_flash.srv  set_speed.srv
