<?xml version="1.0"?>
<package format="2">
  <name>inspire_hand_modbus</name>
  <version>0.0.1</version>
  <description>The inspire_hand_modbus package</description>

  <maintainer email="ju.dong6276@gmail.com">Dong Ju</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>message_generation</build_depend>
  <build_depend>libmodbus-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>  


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pymodbus</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <message_generation/>
  </export>
</package>

